[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Car2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy3.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 292.197, 214.605 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.9851

[node name="Enemy3" type="Node2D"]

[node name="Enemy3" type="KinematicBody2D" parent="."]
position = Vector2( -0.33371, 0 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy3"]
polygon = PoolVector2Array( -1.14103, -22.5099, 22.5645, 2.12259, 8.39414, 16.8226, -8.6897, 16.5578, -22.5952, 2.78476 )

[node name="Area2D" type="Area2D" parent="Enemy3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3/Area2D"]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="Enemy3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy3/Hurtbox"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Enemy3"]
texture = ExtResource( 1 )
[connection signal="body_entered" from="Enemy3/Area2D" to="Enemy3" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Enemy3/Area2D" to="Enemy3" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Enemy3/Hurtbox" to="Enemy3" method="_on_Hurtbox_body_entered"]
